--- a/style.css
+++ b/style.css
@@ -1,4 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
-:root
+    :root {
+        --branco: white;
+        --cor-de-fundo: #00162e;
+        --fundo-senha: #00244d;
+        --fundo-texto: #001e40;
+        --borda: #0075ff;
+        --roboto: 'Roboto', sans-serif;
+        --roboto-mono: 'Roboto-Mono', sans-serif;
+    }
+
+    *{
+        font-size: 400;
+    }
+
+    body{
+        color: var(--branco);
+        border-color: var(--cor-de-fundo);
+        font-family: var(--roboto);
+    }
+
+
+     
+    .titulo-principal{
+        font-family: var(--roboto-mono);
+        font-size: 32px;
+    }
+
+    .titulo-secundario{
+        font-size: 24px;
+    }
