--- a/style.css
+++ b/style.css
@@ -21,8 +21,6 @@
         font-family: var(--roboto);
     }
 
-
-     
     .titulo-principal{
         font-family: var(--roboto-mono);
         font-size: 32px;
@@ -30,4 +28,9 @@
 
     .titulo-secundario{
         font-size: 24px;
+    }
+
+    .conteudo-titulo{
+        text-align: center;
+        margin-top: 80px;
     }
