--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
         color: var(--branco);
         font-size: 40px;
         font-family: var(--roboto-mono);
+        width: 70%;
     }
 
     #campo-senha:focus{
@@ -59,3 +60,5 @@
         max-width: 1200px;
         margin: 0 auto;
     }
+
+    .parametro
